--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,11 @@
-
-/* Your CSS Code here. */
+.container{
+    width: 200px;
+    background-color: purple;
+    border-left-color: green;
+    font-weight: 5px;
+    padding: 10px;
+}
+h1{
+    font-size: 20px;
+    color: white;
+}
