--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
-.container{
+.main{
     width: 200px;
     background-color: purple;
     border-left-color: green;
-    font-weight: 5px;
+    border-left-width: 5px;
     padding: 10px;
-}
-h1{
     font-size: 20px;
+}
+#heading{
+    /* font-size: 20px; */
     color: white;
 }
