--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,7 @@
 div.main{
     width: 200px;
     background-color: purple;
-    border-left-color: green;
-    border-left-width: 0px;
+    border-left: 5px solid green;
     padding: 10px;
     font-size: 20px;
 }
